--- a/src/web/partial/sidebar.html
+++ b/src/web/partial/sidebar.html
@@ -1,9 +1,11 @@
 <aside class="global">
+  <!--
   <div class="aside-search">
     <input type="text" id="searchbox" placeholder="{{#is lang "en"}}Input Your Keywords{{else}}キーワードを入力してください{{/is}}">
     <span class="button" id="aside-search-clear" style="display: none"></span>
   </div>
-  <nav class="aside-main" data-pjax>
+  -->
+  <nav class="aside-main">
     <div class="aside-search-result-info" style="display: none"></div>
     <div id="spinner" class="spinner" style="display:none;margin-top:50%;margin-left:50%;"></div>
     {{{toctree}}}
