Some more changes.

--- a/src/web/layout/layout.html
+++ b/src/web/layout/layout.html
@@ -47,7 +47,7 @@
 
 </head>
 
-<body id="" data-lang="{{lang}}">
+<body id="" data-lang="{{lang}}" class="{{#unless toctree}}no-sidebar{{/unless}} {{#if fjson.body}}from-rst{{/if}}">
   <a name="top"></a>
 
   {{> header }}
