--- a/src/web/static/css/_aside.scss
+++ b/src/web/static/css/_aside.scss
@@ -1,4 +1,4 @@
-$aside-padding: 22px;
+$aside-padding: 1em;
 
 aside.global {
   float: right;
@@ -35,16 +35,16 @@ aside.global {
         padding-top: 10px;
         > li {
           > a {
-            color: black;
+            color: #444;
             text-decoration: none;
             font-weight: bold;
             padding: 10px;
           }
           > ul {
-            padding: 10px;
+            padding: 1em 1em 1em 0;
             li {
               color: #5d89cb;
-              line-height: 1.2;
+              line-height: 1.3;
               margin: 0;
               padding: 6px 0 6px $aside-padding;
               position: relative;
@@ -90,7 +90,7 @@ aside.global {
           }
           
           li {
-            font-size: 0.93rem;
+            font-size: 0.83rem;
             padding-top: 8px;
             padding-bottom: 0;
             &:before {
