--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -779,6 +779,10 @@ body {
   min-width: 1020px;
   position: relative; }
 
+body.no-sidebar article.main {
+  float: none;
+  width: auto; }
+
 article.main {
   -webkit-box-shadow: -1px 0 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: -1px 0 1px rgba(0, 0, 0, 0.05);
@@ -1053,23 +1057,23 @@ aside.global {
       font-size: 13px;
       height: 24px;
       border-bottom: #ccc;
-      padding-left: 22px;
+      padding-left: 1em;
       border-bottom: 1px solid #ccc; }
     aside.global nav.aside-main > div > ul {
       margin-left: 0;
       padding-top: 10px; }
       aside.global nav.aside-main > div > ul > li > a {
-        color: black;
+        color: #444;
         text-decoration: none;
         font-weight: bold;
         padding: 10px; }
       aside.global nav.aside-main > div > ul > li > ul {
-        padding: 10px; }
+        padding: 1em 1em 1em 0; }
         aside.global nav.aside-main > div > ul > li > ul li {
           color: #5d89cb;
-          line-height: 1.2;
+          line-height: 1.3;
           margin: 0;
-          padding: 6px 0 6px 22px;
+          padding: 6px 0 6px 1em;
           position: relative;
           -webkit-transition: background-color 100ms;
           -moz-transition: background-color 100ms;
@@ -1108,7 +1112,7 @@ aside.global {
             aside.global nav.aside-main > div > ul > li > ul li.current > a, aside.global nav.aside-main > div > ul > li > ul li.current > a:link, aside.global nav.aside-main > div > ul > li > ul li.current > a:hover, aside.global nav.aside-main > div > ul > li > ul li.current > a:visited {
               color: white; }
       aside.global nav.aside-main > div > ul > li li {
-        font-size: 0.93rem;
+        font-size: 0.83rem;
         padding-top: 8px;
         padding-bottom: 0; }
         aside.global nav.aside-main > div > ul > li li:before {
@@ -1601,10 +1605,6 @@ a.btn-big {
   letter-spacing: 0;
   line-height: 41px;
   padding: 0 18px 0; }
-
-body.home article.main {
-  float: none;
-  width: auto; }
 
 #indexContents {
   background-color: #fff;
