--- a/src/web/static/css/common.scss
+++ b/src/web/static/css/common.scss
@@ -55,7 +55,7 @@ pre {
 html {
   background-color: #fff;
 }
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700,300|Open+Sans:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700,300|Open+Sans:400,700);
 
 body {
   background-color: #f9f9f9;
