--- a/src/web/partial/sidebar.html
+++ b/src/web/partial/sidebar.html
@@ -9,5 +9,6 @@
     <div class="aside-search-result-info" style="display: none"></div>
     <div id="spinner" class="spinner" style="display:none;margin-top:50%;margin-left:50%;"></div>
     {{{toctree}}}
+    </div>
   </nav>
 </aside>
