--- a/src/web/static/css/common.scss
+++ b/src/web/static/css/common.scss
@@ -216,6 +216,14 @@ em {
   }
 }
 
+.menuselection {
+    font-weight: bold;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+    padding: 0 2px;
+  }
+
 @include all-a($link_color,underline);
 
 a img:hover {
