[Upate] Added iframe to each sample app page.

--- a/src/web/static/css/_sampleapp.scss
+++ b/src/web/static/css/_sampleapp.scss
@@ -70,3 +70,22 @@ div.sampleapp {
     font-weight: 700;
   }
 }
+
+iframe {
+    margin-top: 107px;
+    margin-left: 30px;
+    transform: scale(1);
+    width: 285px;
+    height: 505px;
+}
+
+.iframe-samples {
+  background-image: url(../img/samples/frame.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 346px; 
+  height: 717px; 
+  margin:auto;
+  border: none;
+  margin-top: 20px;
+}
