--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -1944,11 +1944,13 @@ div.sampleapp {
   div.sampleapp .column-right {
     float: left;
     margin-bottom: 40px;
-    width: 33.33%; }
+    width: 30%;
+    margin-right: 20px; }
     div.sampleapp .column-left .thumb,
     div.sampleapp .column-center .thumb,
     div.sampleapp .column-right .thumb {
-      max-width: 100%; }
+      max-width: 100%;
+      border: none; }
   div.sampleapp .column-left {
     clear: both; }
 
