[update] fix partial menu bar link not found error

--- a/src/web/partial/navigation.ja.html
+++ b/src/web/partial/navigation.ja.html
@@ -5,26 +5,22 @@
     <li><a href="https://ja.monaca.io/visualstudio.html">Monaca for Visual Studio</a></li>
     <li><a href="https://ja.monaca.io/debugger.html">Monacaデバッガー</a></li>
     <li><a href="https://ja.monaca.io/localkit.html">Monaca Localkit</a></li>
-    <li><a href="https://monaca.mobi/ja/academic/">Monacaアカデミックプラン</a></li>
+    <li><a href="https://ja.monaca.io/academic.html">Monacaアカデミックプラン</a></li>
     <li><a href="http://ja.onsen.io/" target="_blank" rel="nofollow">Onsen UI <i class="fa fa-external-link"></i></a></li>
     <li><a href="https://ja.monaca.io/enterprise.html">Monacaエンタープライズ</a></li>
   </ul>
 </li>
 
 <li>
-  <span class="nav-title dropdown-toggle">料金</span>
-  <ul>
-    <li><a href="https://ja.monaca.io/prices.html">ご利用料金</a></li>
-    <li><a href="https://monaca.mobi/ja/pricing">Monacaクラウド・プラン比較</a></li>
-  </ul>
+  <a class="nav-title" href="https://ja.monaca.io/pricing.html">料金</a>
 </li>
 
 <li>
   <span class="nav-title dropdown-toggle">パートナー</span>
   <ul>
-    <li><a href="https://monaca.mobi/ja/partner/">開発パートナー制度</a></li>
-    <li><a href="https://monaca.mobi/ja/partner/list/">開発パートナー企業紹介</a></li>
-    <li><a href="https://monaca.mobi/ja/productsPartner/">プロダクトパートナー</a></li>
+    <li><a href="https://ja.monaca.io/solution-partner/">開発パートナー制度</a></li>
+    <li><a href="https://ja.monaca.io/solution-partner/list.html">開発パートナー企業紹介</a></li>
+    <li><a href="https://ja.monaca.io/product-partner/">プロダクトパートナー</a></li>
   </ul>
 </li>
 
@@ -32,8 +28,8 @@
   <span class="nav-title dropdown-toggle">サポート・サービス</span>
   <ul>
     <li><a href="https://ja.monaca.io/support.html">サポート・サービス概要</a></li>
-    <li><a href="https://monaca.mobi/ja/training/">トレーニング</a></li>
-    <li><a href="https://monaca.mobi/ja/support/index">サポート受付</a></li>
+    <li><a href="https://ja.monaca.io/service/training.html">トレーニング</a></li>
+    <li><a href="https://ja.monaca.io/service/">サポート受付</a></li>
     <li><a href="https://ja.monaca.io/development.html">アプリ開発依頼</a></li>
   </ul>
 </li>
@@ -41,28 +37,29 @@
 <li>
   <span class="nav-title dropdown-toggle">活用事例</span>
   <ul>
-    <li><a href="https://monaca.mobi/ja/showcase">アプリ事例</a></li>
+    <li><a href="https://ja.monaca.io/great-apps.html">アプリ事例</a></li>
+    <li><a href="https://ja.monaca.io/showcase/">導入事例</a></li>
   </ul>
 </li>
 
 <li>
-  <a class="nav-title" href="http://docs.monaca.mobi/ja/">ドキュメント</a>
+  <a class="nav-title" href="http://docs.monaca.io/ja/">ドキュメント</a>
 </li>
 
 <li>
   <span class="nav-title dropdown-toggle">お知らせ</span>
   <ul>
     <li><a href="http://blog.asial.co.jp/category/21" target="_blank" rel="nofollow">ブログ <i class="fa fa-external-link"></i></a></li>
-    <li><a href="https://monaca.mobi/ja/headline">ニュース・更新情報</a></li>
-    <li><a href="https://monaca.mobi/ja/headline/fault">障害・不具合情報</a></li>
+    <li><a href="https://ja.monaca.io/headline/">ニュース・更新情報</a></li>
+    <li><a href="https://ja.monaca.io/headline/fault.html">障害・不具合情報</a></li>
   </ul>
 </li>
 
 <li>
   <span class="nav-title dropdown-toggle">お問い合わせ</span>
   <ul>
-    <li><a href="https://monaca.mobi/ja/support/index">サポート受付</a></li>
-    <li><a href="https://monaca.mobi/ja/support/inquiry">お問い合わせ</a></li>
+    <li><a href="https://ja.monaca.io/service/">サポート受付</a></li>
+    <li><a href="https://ja.monaca.io/support/inquiry.html">お問い合わせ</a></li>
     <li><a href="https://ja.monaca.io/development.html">アプリ開発依頼</a></li>
     <li><a href="https://ja.monaca.io/careers.html">採用情報</a></li>
   </ul>
@@ -70,5 +67,5 @@
 
 
 <li><a href="https://monaca.mobi/ja/register/start" class="nav-title btn-signup">サインアップ</a></li>
-<li><a href="https://monaca.mobi/ja/login" class="nav-title btn-login">ログイン</a></li>
+<li><a href="https://ja.monaca.io/login" class="nav-title btn-login">ログイン</a></li>
 <
