[update] fixed broken links in navigation and debug page

--- a/src/web/partial/navigation.en.html
+++ b/src/web/partial/navigation.en.html
@@ -11,16 +11,17 @@
 </li>
 
 <li>
-  <a class="nav-title" href="https://monaca.mobi/en/pricing">Pricing</a>
+  <a class="nav-title" href="https://monaca.io/pricing.html">Pricing</a>
 </li>
 
 <li>
   <span class="nav-title dropdown-toggle">Resources</span>
      <ul class="dropdown-menu">
-      <li><a href="http://monaca.mobi/en/headline">Updates</a></li>
-      <li><a href="http://docs.monaca.mobi/en/">Docs</a></li>
-      <li><a href="http://monaca.mobi/en/showcase">Showcase</a></li>
+      <li><a href="https://monaca.io/headline/">Updates</a></li>
+      <li><a href="https://docs.monaca.io/en/">Docs</a></li>
+      <li><a href="https://monaca.io/great-apps.html">Showcase</a></li>
       <li><a href="http://monaca.mobi/en/forum">Forum</a></li>
+      <li><a href="https://monaca.io/product-partner/">Partner</a></li>
   </ul>
 </li>
 
@@ -29,10 +30,10 @@
 </li>
 
 <li>
-  <a class="nav-title" href="https://monaca.mobi/en/support/index">Services</a>
+  <a class="nav-title" href="https://monaca.io/service/">Services</a>
 </li>
 
 <li><a href="https://monaca.mobi/en/register/start" class="nav-title btn-signup">Sign Up</a></li>
-<li><a href="https://monaca.mobi/en/login" class="nav-title btn-login">Login</a></li>
+<li><a href="https://monaca.io/login" class="nav-title btn-login">Login</a></li>
 
 <li><a href="/ja/" class="nav-title">日本語</a></li>
