Changed link of Monaca blog

--- a/src/web/partial/navigation.ja.html
+++ b/src/web/partial/navigation.ja.html
@@ -49,7 +49,7 @@
 <li>
   <span class="nav-title dropdown-toggle">お知らせ</span>
   <ul>
-    <li><a href="http://blog.asial.co.jp/category/21" target="_blank" rel="nofollow">ブログ <i class="fa fa-external-link"></i></a></li>
+    <li><a href="http://ja.onsen.io/blog/" target="_blank" rel="nofollow">ブログ <i class="fa fa-external-link"></i></a></li>
     <li><a href="https://ja.monaca.io/headline/">ニュース・更新情報</a></li>
     <li><a href="https://ja.monaca.io/headline/fault.html">障害・不具合情報</a></li>
   </ul>
