--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -208,20 +208,24 @@ tt {
 
 em {
   font-weight: bold;
-  font-style: normal; }
-  em.guilabel, em.menuselection {
-    font-weight: normal;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f5f5f5;
-    padding: 0 2px; }
+  font-style: normal;
+}
+
+.guilabel {
+  font-weight: normal;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  padding: 0 2px;
+}
 
 .menuselection {
   font-weight: bold;
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f5f5f5;
-  padding: 0 2px; }
+  padding: 0 2px;
+}
 
 a:link, a:visited {
   color: #3372ff;
