--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -202,33 +202,27 @@ span.pre {
 
 tt {
   font-family: "Source Code Pro", "Monaco", "Menlo", "Ubuntu Mono", "Consolas", "source-code-pro", monospace;
-  font-weight: 500;
-}
-
-tt.file {
-  font-weight: bold;
-}
+  font-weight: 500; }
+  tt.file {
+    font-weight: bold; }
 
 em {
   font-weight: bold;
-  font-style: normal;
-}
+  font-style: normal; }
 
 .guilabel {
   font-weight: normal;
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f5f5f5;
-  padding: 0 2px;
-}
+  padding: 0 2px; }
 
 .menuselection {
   font-weight: bold;
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f5f5f5;
-  padding: 0 2px;
-}
+  padding: 0 2px; }
 
 a:link, a:visited {
   color: #3372ff;
