[update] modify header language button switch current page

--- a/src/web/partial/navigation.en.html
+++ b/src/web/partial/navigation.en.html
@@ -36,4 +36,4 @@
 <li><a href="https://monaca.mobi/en/register/start" class="nav-title btn-signup">Sign Up</a></li>
 <li><a href="https://monaca.io/login" class="nav-title btn-login">Login</a></li>
 
-<li><a href="/ja/" class="nav-title">日本語</a></li>
+<li><a class="nav-title" href="javascript:void(0)" onclick="switchLanguage('{{lang}}','ja')">日本語</a></li>
