--- a/src/web/partial/navigation.ja.html
+++ b/src/web/partial/navigation.ja.html
@@ -68,4 +68,4 @@
 
 <li><a href="https://monaca.mobi/ja/register/start" class="nav-title btn-signup">サインアップ</a></li>
 <li><a href="https://ja.monaca.io/login" class="nav-title btn-login">ログイン</a></li>
-<
+<li><a class="nav-title" href="javascript:void(0)" onclick="switchLanguage('{{lang}}','en')">English</a></li>
