[update] fixed css on ul.simple margin

--- a/src/web/static/css/_modules.scss
+++ b/src/web/static/css/_modules.scss
@@ -26,7 +26,8 @@ ol.simple {
 
 blockquote ul,
 ul.simple {
-  /*margin-bottom: 20px;*/
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding-left: 0px;
   li {
     margin-left: 50px;
