--- a/src/web/static/css/_sampleapp.scss
+++ b/src/web/static/css/_sampleapp.scss
@@ -4,7 +4,7 @@ div.clear.sampleapp.section h3 {
   border-bottom: 1px solid;
 }
 
-div.breadcrumb {
+div.title_breadcrumb {
   margin-bottom: 10px;
   font-size: 13px;
   line-height: 13px;
