--- a/src/web/partial/navigation.en.html
+++ b/src/web/partial/navigation.en.html
@@ -1,6 +1,6 @@
-<li>
-  <span class="nav-title dropdown-toggle">Products</span>
-  <ul>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products</a>
+  <ul class="dropdown-menu">
     <li><a href="https://monaca.io/cloud.html">Monaca Cloud</a></li>
     <li><a href="https://monaca.io/visualstudio.html">Monaca for Visual Studio</a></li>
     <li><a href="https://monaca.io/debugger.html">Monaca Debugger</a></li>
@@ -11,11 +11,11 @@
 </li>
 
 <li>
-  <a class="nav-title" href="https://monaca.io/pricing.html">Pricing</a>
+  <a href="https://monaca.io/pricing.html">Pricing</a>
 </li>
 
-<li>
-  <span class="nav-title dropdown-toggle">Resources</span>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources</a>
      <ul class="dropdown-menu">
       <li><a href="https://monaca.io/headline/">Updates</a></li>
       <li><a href="https://docs.monaca.io/en/">Docs</a></li>
@@ -26,14 +26,14 @@
 </li>
 
 <li>
-  <a class="nav-title" href="http://blog.asial.co.jp/category/22?lang=en" target="_blank">Blog</a>
+  <a href="http://blog.asial.co.jp/category/22?lang=en" target="_blank">Blog</a>
 </li>
 
 <li>
-  <a class="nav-title" href="https://monaca.io/service/">Services</a>
+  <a href="https://monaca.io/service/">Services</a>
 </li>
 
-<li><a href="https://monaca.mobi/en/register/start" class="nav-title btn-signup">Sign Up</a></li>
-<li><a href="https://monaca.io/login" class="nav-title btn-login">Login</a></li>
+<li><a href="https://monaca.mobi/en/register/start">Sign Up</a></li>
+<li><a href="https://monaca.io/login">Login</a></li>
 
-<li><a class="nav-title" href="javascript:void(0)" onclick="switchLanguage('{{lang}}','ja')">日本語</a></li>
+<li><a href="javascript:void(0)" onclick="switchLanguage('{{lang}}','ja')">日本語</a></li>
