--- a/src/web/static/css/common.scss
+++ b/src/web/static/css/common.scss
@@ -1,3 +1,11 @@
+$width: 1170px;
+$break: 767px;
+$break-xl: 1300px; // 1300 * 0.9 = 1170
+$break-lg: 970px;
+$break-xs: 640px;
+$_link-color: #4457ff;
+$monaca-blue: #5d89cb;
+
 @charset "UTF-8";
 
 @import "bourbon";
@@ -250,6 +258,67 @@ input:focus, textarea:focus {
   background-color: #888;
   border: 1px solid white;
   border-radius: 12px;
+}
+
+/*
+# Main Container
+
+```
+<div class="container box-full">
+    <p>Yeah</p>
+</div>
+```
+*/
+.container {
+  padding-left: 0;
+  padding-right: 0;
+  /*min-width: $width;*/
+  width: auto;
+  @media screen and (max-width: $break-xl) {
+    padding-left: 4.4%;
+    padding-right: 4.4%;
+    width: 100%;
+    min-width: 0;
+  }
+}
+
+/*
+# Dark dropdown menu
+
+```
+<div style="height:160px;">
+    <div class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dogs</a>
+        <ul class="dropdown-menu dropdown-menu-dark">
+            <li><a href="#">Shiba</a></li>
+            <li><a href="#">Corgy</a></li>
+            <li><span>Akita with no link</span></li>
+        </ul>
+    </div>
+</div>
+```
+*/
+.dropdown-menu-dark {
+  background-color: #2c2c2c;
+  li {
+    color: #ffffff;
+    height: 38px;
+    a,
+    span {
+      color: #ffffff;
+      display: inline-block;
+      -webkit-font-smoothing: antialiased;
+      padding: 0 25px;
+      width: 100%;
+      height: 100%;
+      line-height: 39px;
+      &:hover,
+      &.active {
+        background-color: #383838;
+        color: #7cdaff;
+      }
+    }
+  }
 }
 
 @import "modules";
