--- a/src/web/partial/sidebar.html
+++ b/src/web/partial/sidebar.html
@@ -13,7 +13,7 @@
           s.parentNode.insertBefore(gcse, s);
         })();
       </script>
-      <gcse:search></gcse:search>
+      <gcse:search style="padding: 0"></gcse:search>
     <!-- <input type="text" id="searchbox" placeholder="{{#is lang "en"}}Input Your Keywords{{else}}キーワードを入力してください{{/is}}">
     <span class="button" id="aside-search-clear" style="display: none"></span> -->
   </div>
@@ -21,7 +21,7 @@
   <nav class="aside-main">
     <div class="aside-search-result-info" style="display: none"></div>
     <div id="spinner" class="spinner" style="display:none;margin-top:50%;margin-left:50%;"></div>
-    {{{toctree}}}
+      {{{toctree}}}
     </div>
   </nav>
 </aside>
