--- a/src/web/static/css/_aside.scss
+++ b/src/web/static/css/_aside.scss
@@ -1,15 +1,45 @@
-$aside-padding: 1em;
+$aside-padding: 0;
 
 aside.global {
   float: right;
   font-size: 16px;
-  padding: 121px 0px 40px 0px;
+  padding: 55px 0px 40px 0px;
   width: 288px;
   @include box-sizing(border-box);
 
   ::-webkit-scrollbar {
     width: 8px;
   }
+
+  /* css for google search */
+  div.aside-search {
+    padding: 0;
+  }
+
+  .gsc-input-box {
+      height: 30px;
+  }
+
+  div.aside-search .cse .gsc-control-cse, .gsc-control-cse {
+    padding: 0;
+    width: auto;
+  }
+
+  div.aside-search .gsib_a {
+      width: 100%;
+      padding: 5px 6px 3px;
+  }
+
+  div.aside-search .cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2 {
+    width: 56px;
+    height: 30px;
+    padding: 4px 18px 4px 18px;
+    min-width: 13px;
+    margin-top: 5px;
+    margin-right: 5px;
+  }
+
+  /* css for google search */
 
   /* toc */
   nav.aside-main {
