--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -1266,14 +1266,33 @@ a.scrollup {
 aside.global {
   float: right;
   font-size: 16px;
-  padding: 121px 0px 40px 0px;
+  padding: 55px 0px 40px 0px;
   width: 288px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  /* css for google search */
+  /* css for google search */
   /* toc */ }
   aside.global ::-webkit-scrollbar {
     width: 8px; }
+  aside.global div.aside-search {
+    padding: 0; }
+  aside.global .gsc-input-box {
+    height: 30px; }
+  aside.global div.aside-search .cse .gsc-control-cse, aside.global .gsc-control-cse {
+    padding: 0;
+    width: auto; }
+  aside.global div.aside-search .gsib_a {
+    width: 100%;
+    padding: 5px 6px 3px; }
+  aside.global div.aside-search .cse .gsc-search-button input.gsc-search-button-v2, aside.global input.gsc-search-button-v2 {
+    width: 56px;
+    height: 30px;
+    padding: 4px 18px 4px 18px;
+    min-width: 13px;
+    margin-top: 5px;
+    margin-right: 5px; }
   aside.global nav.aside-main {
     background-color: #f2f2f2;
     padding-right: 10px;
@@ -1285,7 +1304,7 @@ aside.global {
       font-size: 13px;
       height: 24px;
       border-bottom: #ccc;
-      padding-left: 1em;
+      padding-left: 0;
       border-bottom: 1px solid #ccc; }
     aside.global nav.aside-main > div > ul {
       margin-left: 0;
@@ -1301,7 +1320,7 @@ aside.global {
           color: #5d89cb;
           line-height: 1.5;
           margin: 0;
-          padding: 6px 0 6px 1em;
+          padding: 6px 0 6px 0;
           position: relative;
           -webkit-transition: background-color 100ms;
           -moz-transition: background-color 100ms;
